# dirs-lite-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
src/: lib.rs
