[package]
name = "dirs-lite"
version = "1.0.0"
edition = "2024"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sassman/dirs-lite-rs"
description = "Get platform-specific config, data, and cache directories. Supports XDG-style on macOS. No dependencies."

[dependencies]

[features]
default = []

# this is for MacOS users who do favor the XDG style config paths `~/.config`
# over the MacOS style `~/Library/Application Support`
favor-xdg-style = []
